# SImpleDataStructuresPracticeC11

./: CMakeLists.txt  Complex.cpp  Complex.h  SimpleBinaryTree.h  SimpleList.h  SimpleQueue.h  SimpleStack.h  SimpleVector.cpp  SimpleVector.h  StringRef.cpp  StringRef.h  linked_list.h  main.cpp
Tests/: TestComplext.cpp  TestSimpleList.cpp  TestSimpleQueue.cpp  TestSimpleStack.cpp  TestSimpleVector.cpp  TestStringRef.cpp  Testlinked_list.cpp
